# openai-copilot

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  test.yaml
cmd/openai-copilot/: main.go
openai_copilot/: agent.py  cli.py  llm.py  output.py
pkg/assistants/: simple.go
pkg/consts/: prompts.go
pkg/llms/: openai.go  tokens.go  tokens_test.go
pkg/tools/: googlesearch.go  kubectl.go  mcp.go  tool.go  trivy.go
pkg/types/: types.go
